--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "three": "^0.153.0"
   },
   "devDependencies": {
-    "vite": "^4.3.9"
+    "gh-pages": "^6.1.1",
+    "vite": "^4.5.3"
   },
   "scripts": {
     "deploy": "gh-pages -d dist"
