--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "vite": "^4.5.3"
   },
   "scripts": {
-    "deploy": "gh-pages -d dist"
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   }
 }
